--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <header>
         <h1>Mitchell Walker</h1>
             <div class = "navBar">
-                <a href="index.html">Home</a>
-                <a href="contact.html">Contact</a>
-                <a href="projects.html">Projects</a>
-                <a href="about.html">About</a>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="about.html">About</a>
+                </nav>
             </div>
     </header>
     <section class = "upper">
