--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
     </header>
     <section class = "upper">
-        <img class="mainTeam" src = "https://a3.espncdn.com/combiner/i?img=%2Fphoto%2F2019%2F0320%2Fr516999_2_1296x729_16%2D9.jpg">
+        <img class="mainTeam" src = "https://a3.espncdn.com/combiner/i?img=%2Fphoto%2F2019%2F0320%2Fr516999_2_1296x729_16%2D9.jpg" alt="Team USA Soccer Team">
            <div class="upperText"> <h2>Mitchell Walker</h2>
                 <button>My Projects</button>
                 <p>I am a full-stack Web Developer with experience in HTML5, CSS, JavaScript, Node.js, and React</p>
@@ -27,35 +27,35 @@
             </section>
     <div class = "main">
         <div class = tim>
-            <img src = "https://en.as.com/en/imagenes/2019/06/13/football/1560448943_072441_1560449117_noticia_normal.jpg">
+            <img src = "https://en.as.com/en/imagenes/2019/06/13/football/1560448943_072441_1560449117_noticia_normal.jpg" alt = "Timothy Weah">
                 <p>Timothy Weah</p>
         </div>
         <div class = "pulisic">
-            <img src = "https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F1158429361%2F0x0.jpg%3FcropX1%3D0%26cropX2%3D2124%26cropY1%3D485%26cropY2%3D2078">
+            <img src = "https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F1158429361%2F0x0.jpg%3FcropX1%3D0%26cropX2%3D2124%26cropY1%3D485%26cropY2%3D2078"alt="Christian Pulisic">
             <p>Christian Pulisic</p>
         </div>
         <div class = "weston">
-            <img src = "https://pbs.twimg.com/media/EiYsnhyWkAQpJTc.jpg">
+            <img src = "https://pbs.twimg.com/media/EiYsnhyWkAQpJTc.jpg" alt = "Weston Mckennie">
             <p>Weston Mckennie</p>
         </div>
         <div class = "adams">
-            <img src = "https://cdn.theathletic.com/app/uploads/2020/07/09093323/tyler-adams-scaled-e1594301653884-1024x683.jpg">
+            <img src = "https://cdn.theathletic.com/app/uploads/2020/07/09093323/tyler-adams-scaled-e1594301653884-1024x683.jpg" alt = "Tyler Adams">
             <p>Tyler Adams</p>
         </div>
         <div class = "dest">
-            <img src = "https://img.bleacherreport.net/img/images/photos/003/846/455/hi-res-1528ea3bec7ede0ceb9c8bdf98930d76_crop_north.jpg?1578576030&w=3072&h=2048">
+            <img src = "https://img.bleacherreport.net/img/images/photos/003/846/455/hi-res-1528ea3bec7ede0ceb9c8bdf98930d76_crop_north.jpg?1578576030&w=3072&h=2048" alt = "Serginio Dest">
             <p>Serginio Dest</p>
         </div>
         <div class = "gio">
-            <img src = "https://en.as.com/en/imagenes/2020/09/03/football/1599089892_398762_1599090006_noticia_normal_recorte1.jpg"> 
+            <img src = "https://en.as.com/en/imagenes/2020/09/03/football/1599089892_398762_1599090006_noticia_normal_recorte1.jpg" alt = "Giovani Reyna"> 
             <p>Gio Reyna</p>
         </div>
         <div class = "steffen">
-            <img src = "https://cdn.vox-cdn.com/thumbor/FaOcfSxROfR7At3e8UBV9YvfO1U=/0x0:5142x3428/1200x800/filters:focal(3022x587:3844x1409)/cdn.vox-cdn.com/uploads/chorus_image/image/66719459/1091970072.jpg.0.jpg">
+            <img src = "https://cdn.vox-cdn.com/thumbor/FaOcfSxROfR7At3e8UBV9YvfO1U=/0x0:5142x3428/1200x800/filters:focal(3022x587:3844x1409)/cdn.vox-cdn.com/uploads/chorus_image/image/66719459/1091970072.jpg.0.jpg" alt = "Zach Steffen">
             <p>Zach Steffen</p>
         </div>
         <div class = "robinson">
-            <img src = "https://pbs.twimg.com/media/EOvgeDlX0AIrPbM.jpg">
+            <img src = "https://pbs.twimg.com/media/EOvgeDlX0AIrPbM.jpg" alt = "Antonee Robinson">
             <p>Antonee Robinson</p>
         </div>
     </div>
